--- a/pagilaran.html
+++ b/pagilaran.html
@@ -14,7 +14,7 @@
 <body>
     <div class="wrapper">
         <header class="header">
-            <h2 style="background-color: beige;">2 TEMPAT WISATA DI KABUPATEN BATANG YANG WAJIB DIKUNJUNGI</h2>
+            <h2 style="background-color: beige;">TEMPAT WISATA DI KABUPATEN BATANG</h2>
         </header>
         <nav class="nav">
         <P>
@@ -23,7 +23,7 @@
         <a href="pagilaran.html"><b style="font-size: 20px;">Kebun Teh Pagilaran</b></a></P>
         </nav>
         <article class="main">
-            <img src="tehpagilaran.jpg" width="300px" height="130px">
+            <img src="tehpagilaran.jpg" width="200px" height="130px">
             <p style="background-color: tan;">
                Perkebunan Teh Pagilaran terletak diperbukitan Dieng. Udara yang sejuk dan hijaunya hamparan teh yang sangat luas bisa menyegarkan otak dan pikiran kita. Itu kenapa Pagilaran menjadi salah satu tempat favorit untuk berwisata. Bukan Cuma muda-mudi saja yang datang kesini. Tempat ini juga sangat cocok untuk tempat berkumpul bersama keluarga. Tiket masuknya cukup murah. Hanya lima ribu rupiah per motor.
             </p>
